# smart-librarian

./: .gitignore  CMakeLists.txt  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
include/archive/: AppConfig.h  BinaryReader.h  BinaryWriter.h  PersistenceManager.h
include/core/: Application.h
include/gui/: ArchiveWidget.h  DropZone.h  MainWindow.h  OcrWorker.h  SearchWidget.h
include/ocr/: ImageBuffer.h  ImageLoader.h  ImagePreprocessor.h  OcrEngine.h  OcrResult.h
include/pdf/: PdfDocument.h  PdfFont.h  PdfPage.h  PdfStream.h  PdfWriter.h
include/search/: InvertedIndex.h  SearchEngine.h  TextProcessor.h  Trie.h
include/utils/: Logger.h
src/: CMakeLists.txt  main.cpp
src/archive/: BinaryReader.cpp  BinaryWriter.cpp  CMakeLists.txt  PersistenceManager.cpp
src/core/: Application.cpp  CMakeLists.txt
src/gui/: ArchiveWidget.cpp  CMakeLists.txt  DropZone.cpp  MainWindow.cpp  OcrWorker.cpp  SearchWidget.cpp
src/ocr/: CMakeLists.txt  ImageLoader.cpp  ImagePreprocessor.cpp  OcrEngine.cpp
src/pdf/: CMakeLists.txt  PdfDocument.cpp  PdfPage.cpp  PdfStream.cpp  PdfWriter.cpp
src/search/: CMakeLists.txt  InvertedIndex.cpp  SearchEngine.cpp  TextProcessor.cpp  Trie.cpp
src/utils/: CMakeLists.txt  Logger.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/archive/: CMakeLists.txt  test_BinaryWriterReader.cpp  test_PersistenceManager.cpp
tests/unit/ocr/: CMakeLists.txt  test_ImageBuffer.cpp  test_ImagePreprocessor.cpp
tests/unit/pdf/: CMakeLists.txt  test_PdfDocument.cpp  test_PdfPage.cpp  test_PdfStream.cpp
tests/unit/search/: CMakeLists.txt  test_InvertedIndex.cpp  test_SearchEngine.cpp  test_TextProcessor.cpp  test_Trie.cpp
